[#9]refactor: 에러 처리 수정