@@ -1,12 +1,13 @@
 package kw.soft.gourmet.exception;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.validation.BindingResult;
 
 public record ErrorResponse(int code, String message, int status, List<FieldError> errors) {
     public static ErrorResponse of(final ErrorCode code) {
-        return new ErrorResponse(code.getCode(), code.getMessage(), code.getStatus().value(), List.of());
+        return new ErrorResponse(code.getCode(), code.getMessage(), code.getStatus().value(), Collections.emptyList());
     }
 
     public static ErrorResponse of(final ErrorCode code, final BindingResult bindingResult) {
